resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  myingress
  namespace: updates-lab
spec:
  rules:
  - host:        myfrontend.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myfrontend-service
            port:
              number: 80
  ingressClassName: nginx
